# sam-bridge

./: .gitignore  README.md  SETUP-FOR-AI.md  index.html  package-lock.json  package.json  sam-bridge-connect.bat  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  SamBuddy.tsx  SamChat.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
