[package]
name = "sam-desktop"
version = "0.1.0"
description = "Sam Bridge — Claude token sync"
authors = ["All Spec Approvals"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "6"
open = "5"
